markup/style tweax 😜

--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -4,7 +4,7 @@
 }
 
 main {
-  font-family: 'Helvetica Neue', Verdana, Helvetica, Arial, sans-serif;
+  font-family: sans-serif;
   width: 75rem;
   max-width: 98%;
   margin: 0 auto;
