--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -40,7 +40,7 @@ article {
   margin: 0.2em;
   padding: 0.3em;
   display: grid;
-  grid-template-columns: 3fr 4fr 1fr 2fr 1fr;
+  grid-template-columns: 4fr 8fr 2fr 4fr 1fr 1fr 1fr 1fr;
 }
 footer {
   position: fixed;
